# temporal-ai-agent-cross-namespace-with-nexus

./: .env.example  .gitignore  MANUAL_TESTS.md  README.md  activities.py  finance_nexus_worker.py  it_nexus_worker.py  llm_client.py  mock_llm_client.py  orchestrator_worker.py  performance_benchmark.py  pyproject.toml  start_workflow.py  worker.py  workflow.py
app/: activities.py  finance_nexus_handler.py  finance_service.py  it_activities.py  it_nexus_handler.py  it_service.py  workflow.py
diagrams/: app_flow_basic.txt  app_flow_with_nexus.txt  architecture_comparison.txt
infrastructure/: terraform.tf  terraform.tfvars.example
litellm_temporal/: .env.example  README.md  client.py  finance_nexus_worker.py  orchestrator_worker.py  pyproject.toml
litellm_temporal/app/: activities.py  finance_service.py  it_nexus_handler.py  it_workflows.py  workflow.py
nexus_mcp_temporal/: README.md  finance_gateway_server.py  finance_nexus_worker.py  it_gateway_server.py  it_nexus_worker.py  pyproject.toml
nexus_mcp_temporal/app/: finance_activities.py  finance_models.py  finance_nexus_handler.py  finance_service.py  finance_workflows.py  it_models.py  it_nexus_handler.py  it_service.py  mcp_helpers.py  shared.py  workflow.py
openai_temporal/: .env.example  README.md  client.py  it_nexus_worker.py  orchestrator_worker.py  pyproject.toml
openai_temporal/app/: activities.py  finance_activities.py  finance_nexus_handler.py  it_models.py  it_service.py  llm_client.py  workflow.py
openai_temporal_mcp/: Nexus_AI_Tools_Considerations.md  README.md  client.py  finance_worker.py  it_worker.py  mcp_discussion.md  orchestrator_worker.py  pyproject.toml
openai_temporal_mcp/app/: activities.py  finance_activities.py  finance_models.py  finance_workflows.py  it_activities.py  it_models.py  it_workflows.py  llm_client.py  shared.py  workflow.py
openai_temporal_mcp/mcp_servers/: finance_mcp_server.py  it_mcp_server.py
