[project]
name = "durable-agent-loop"
version = "0.1.0"
description = "Reference implementation of the Durable Agent Loop Architecture"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "temporalio>=1.5.0",
    "litellm>=1.0.0",
    "simpleeval>=0.9.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

# No build system needed - this is a script-based project
