[project]
name = "durable-agent-loop"
version = "0.1.0"
description = "Reference implementation of the Durable Agent Loop Architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "temporalio[openai-agents]>=1.18.0",  # Temporal with OpenAI Agents SDK
    "openai>=1.0.0",
    "openai-agents[litellm]==0.3.2",
    "litellm>=1.0.0",
    "simpleeval>=0.9.13",
    "python-dotenv>=1.0.0",
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",  # HTTP client for MCP communication
    "fastapi>=0.115.0",  # HTTP server for MCP endpoints
    "uvicorn>=0.32.0",  # ASGI server for FastAPI
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

# No build system needed - this is a script-based project
